[project]
name = "comfy-save-as-jpg"
description = "A lightweight ComfyUI custom node that saves images as JPEG (.jpg) files with configurable quality and optional caption sidecar files."
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = [
    "numpy>=1.20.0",
    "Pillow>=9.0.0",
]

[project.urls]
Repository = "https://github.com/scofano/comfy-save-as-jpg"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/scofano/comfy-save-as-jpg#readme"
"Bug Tracker" = "https://github.com/scofano/comfy-save-as-jpg/issues"

[tool.comfy]
PublisherId = "dansco"
DisplayName = "Save as JPG"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility