[project]
name = "comfy-save-as-jpg"
description = "A lightweight ComfyUI custom node that saves images as JPEG (.jpg) files with configurable quality and optional caption sidecar files."
version = "1.0.0"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GNU Affero General Public License v3.0"}
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.20.0",
    "Pillow>=9.0.0",
]

[project.urls]
Repository = "https://github.com/scofano/comfy-save-as-jpg"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/scofano/comfy-save-as-jpg#readme"
"Bug Tracker" = "https://github.com/scofano/comfy-save-as-jpg/issues"

[tool.comfy]
PublisherId = "dansco"
DisplayName = "Save as JPG"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility